--- a/project/pic/Assembly-CSharp.csproj
+++ b/project/pic/Assembly-CSharp.csproj
@@ -51,8 +51,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\checkPosition.cs" />
+     <Compile Include="Assets\Scripts\main.cs" />
      <Compile Include="Assets\Scripts\qitafeiji.cs" />
      <Compile Include="Assets\Scripts\qitafeiji2.cs" />
+     <Compile Include="Assets\Scripts\yidong.cs" />
      <Compile Include="Assets\Scripts\zishenzhanji.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
