--- a/project/pic/Assembly-CSharp.csproj
+++ b/project/pic/Assembly-CSharp.csproj
@@ -65,6 +65,9 @@
      <Compile Include="Assets\Scripts\cs_protobuf\CsEnum.cs" />
      <Compile Include="Assets\Scripts\cs_protobuf\CsMsg.cs" />
      <Compile Include="Assets\Scripts\cs_protobuf\CsPerson.cs" />
+     <Compile Include="Assets\Scripts\DelegateManager.cs" />
+     <Compile Include="Assets\Scripts\enemyItems.cs" />
+     <Compile Include="Assets\Scripts\MsgHandle.cs" />
      <Compile Include="Assets\Scripts\MsgPackage.cs" />
      <Compile Include="Assets\Scripts\OnButtonClickEvent.cs" />
      <Compile Include="Assets\Scripts\playerItems.cs" />
