--- a/project/Sever/Sever.csproj
+++ b/project/Sever/Sever.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="CsEnum.cs" />
     <Compile Include="CsMsg.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="Radar.cs" />
     <Compile Include="Sever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoSerialize.cs" />
