--- a/project/Sever/Sever.csproj
+++ b/project/Sever/Sever.csproj
@@ -47,11 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectManager.cs" />
     <Compile Include="CsEnum.cs" />
     <Compile Include="CsMsg.cs" />
-    <Compile Include="Data.cs" />
+    <Compile Include="DataBase.cs" />
+    <Compile Include="DataManager.cs" />
+    <Compile Include="MsgManager.cs" />
     <Compile Include="Radar.cs" />
-    <Compile Include="Sever.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoSerialize.cs" />
   </ItemGroup>
