--- a/project/pic/Assembly-CSharp.csproj
+++ b/project/pic/Assembly-CSharp.csproj
@@ -63,13 +63,13 @@
      <Compile Include="Assets\Scripts\cs_protobuf\CsEnum.cs" />
      <Compile Include="Assets\Scripts\cs_protobuf\CsMsg.cs" />
      <Compile Include="Assets\Scripts\DelegateManager.cs" />
-     <Compile Include="Assets\Scripts\DontDestoryOnLoad.cs" />
      <Compile Include="Assets\Scripts\enemyItems.cs" />
-     <Compile Include="Assets\Scripts\MsgManager.cs" />
+     <Compile Include="Assets\Scripts\MsgHandle.cs" />
      <Compile Include="Assets\Scripts\OnButtonClickEvent.cs" />
      <Compile Include="Assets\Scripts\playerItems.cs" />
      <Compile Include="Assets\Scripts\ProtoControl.cs" />
      <Compile Include="Assets\Scripts\ProtoSerialize.cs" />
+     <None Include="Assets\Test.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
