--- a/project/pic/Assembly-CSharp.csproj
+++ b/project/pic/Assembly-CSharp.csproj
@@ -99,7 +99,7 @@
  <HintPath>E:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="Google.Protobuf">
- <HintPath>E:/Users/gaokai/Documents/GitHub/LL001/project/pic/Assets/Plugins/Google.Protobuf.dll</HintPath>
+ <HintPath>D:/gaokai/Gitee/LL001/project/pic/Assets/Plugins/Google.Protobuf.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Advertisements">
  <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/UnityEngine.Advertisements.dll</HintPath>
